# auto-quant-research-lab

./: .dockerignore  .gitignore  BACKLOG.md  Dockerfile  LEDGER.md  PROJECT_BRIEF.md  PROMOTED_QUEUE.md  README.md  SETUP_NOTES.md  SPEC.md  STATE.md  conftest.py  data_pipeline.py  docker-compose.yml  main.py  pyproject.toml
data/: download_report.json  universe.json
docker/proxy/: Dockerfile  filter  tinyproxy.conf
engine/: __init__.py  backtest.py  config.py  errors.py  harness.py  io_guard.py  ledger.py  loader.py  metrics.py  portfolio.py  run_backtest.py
hypotheses/H001/: decision.json  hypothesis.md  iterations.json  memo.md  results.json  signal.py
orchestrator/: __init__.py  cli_runner.py  dryrun.py  loop.py  prompts.py  stages.py  state.py
runs/shakedown_20260711_165247/: summary.json  toolcalls.jsonl
scripts/: container_dryrun.sh  fetch_train_val_data.py  ledger_stats.py  shakedown.sh
templates/: decision.example.json  hypothesis.md  memo.md  results.example.json
tests/: hypothesis_harness.py  test_backtest_guards.py  test_known_answer.py  test_ledger.py  test_ledger_stats.py  test_loader.py  test_lookahead_harness.py  test_metrics.py  test_orchestrator_validators.py  test_portfolio.py
