[project]
name = "quantlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.64",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pytest>=9.1.1",
    "requests>=2.34.2",
]

[tool.uv.workspace]
members = [
    "quantlab",
]
